Fix: SPA rewrites (vercel.json), Sign up z-index, Register error message

--- a/client/src/css/utils.css
+++ b/client/src/css/utils.css
@@ -19,6 +19,8 @@
   text-align: center;
   color: #666;
   font-size: 0.9375rem;
+  position: relative;
+  z-index: 2;
 }
 
 .auth-link a {
